--- a/Homework1_HingstmanJeffrey.tex
+++ b/Homework1_HingstmanJeffrey.tex
@@ -26,7 +26,7 @@
 }
 
 \begin{document}
-	\title{Modelling and Control of Complex Nonlinear Engineering Systems \\[0.5cm] \large{Take-Home Exam 2, Mechanical Engineering}} 
+	\title{Analysis on Manifolds \\[0.5cm] \large{Homework 1}} 
 	\date{\today}
 	\author{Jeffrey Hingstman, s4590465}	\maketitle
 	
