--- a/Homework1_HingstmanJeffrey.tex
+++ b/Homework1_HingstmanJeffrey.tex
@@ -4,33 +4,29 @@
 \input{format/Styles/linalg.tex}
 \input{format/Styles/lie.tex}
 
-\usepackage{color} %red, green, blue, yellow, cyan, magenta, black, white
-\definecolor{mygreen}{RGB}{28,172,0} % color values Red, Green, Blue
-\definecolor{mylilas}{RGB}{170,55,241}
 
-\lstset{language=Matlab,%
-	basicstyle=\small,
-	breaklines=true,%
-	morekeywords={matlab2tikz},
-	keywordstyle=\color{blue},%
-	morekeywords=[2]{1}, keywordstyle=[2]{\color{black}},
-	identifierstyle=\color{black},%
-	stringstyle=\color{mylilas},
-	commentstyle=\color{mygreen},%
-	showstringspaces=false,%without this there will be a symbol in the places where there is a space
-	numbers=left,%
-	numberstyle={\tiny \color{black}},% size of the numbers
-	numbersep=6pt, % this defines how far the numbers are from the text
-	emph=[1]{for,end,break},emphstyle=[1]\color{red}, %some words to emphasise
-	%emph=[2]{word1,word2}, emphstyle=[2]{style},    
-}
+
+% Set user input
+\newcommand{\gitfolder}{.git}             % Relative path to .git folder from .tex file
+\newcommand{\reponame}{https://github.com/jeffreyhingstman/AnalysisOnManifolds}    % Name of account and repo. Will be included in URL
+\CatchFileDef{\headfull}{\gitfolder/HEAD}{}              % Get path to head file for checked out branch
+\StrGobbleRight{\headfull}{1}[\head]                      % Remove end of line character
+\StrBehind[2]{\head}{/}[\branch]                          % Parse out the path only
+\CatchFileDef{\commit}{\gitfolder/refs/heads/\branch}{}  % Get the content of the branch head
+\StrGobbleRight{\commit}{1}[\commithash]                  % Remove end of line character
+
+
 
 \begin{document}
 	\title{Analysis on Manifolds \\[0.5cm] \large{Homework 1}} 
 	\date{\today}
 	\author{Jeffrey Hingstman, s4590465}	\maketitle
-	
+	\vspace*{\fill}
+	\noindent
+	URL: \url{\reponame} \\
+	SHA: \commithash
 	\clearpage
-	\section*{Problem 1}
+	\include{Homework_1/Part1.tex}
+
 	
 \end{document}
