--- a/format/preamble.tex
+++ b/format/preamble.tex
@@ -13,6 +13,10 @@
 \usepackage{subcaption}
 \usepackage{xstring}
 \usepackage{catchfile}
+\usepackage{pgf,tikz,pgfplots}
+\pgfplotsset{compat=1.15}
+\usetikzlibrary{cd}
+\usetikzlibrary{arrows}
 
 \usepackage{hyperref}
 \hypersetup{
