--- a/Homework1_HingstmanJeffrey.tex
+++ b/Homework1_HingstmanJeffrey.tex
@@ -31,6 +31,7 @@
 	\include{Homework_1/Part1.tex}
 	\include{Homework_1/Part2_1.tex}
 	\include{Homework_1/Part2_2.tex}
+	\include{Homework_1/Part.tex}
 
 	
 \end{document}
