--- a/Homework3_HingstmanJeffrey.tex
+++ b/Homework3_HingstmanJeffrey.tex
@@ -28,8 +28,9 @@
 	URL: \url{\reponame} \\
 	SHA: \commithash
 	\clearpage
-	\include{Homework_3/Part1.tex}
-	\include{Homework_3/Part2_1.tex}
+	\input{Homework_3/Part1.tex}
+	\input{Homework_3/Part2_1.tex}
+	\input{Homework_3/Part3.tex}
 
 	
 \end{document}
